--- a/기능명세서.md
+++ b/기능명세서.md
@@ -7,7 +7,7 @@
 	- 이동 기능
 
 검색
-	- 필터에서 유저가 선택한 값을 백엔드로 넘겨주는 작업
+	- 필터에서 유저가 선택한 값을 서버로 넘겨주는 작업
 	넘겨줄 값
 		필수
 			- 외식/집밥 여부
@@ -49,46 +49,46 @@
 	- 내 냉장고 목록 이동 기능
 
 내 냉장고 물품 목록
-	- 백엔드에서 유저 냉장고 정보 넘기기
+	- 서버에서 유저 냉장고 정보 넘기기
 	- 클라이언트가 목록 표시
 
 내 냉장고 편집
 	- 삭제
-		- 백엔드에게 값 넘겨주기
-		- 백엔드가 db에서 삭제
+		- 서버에게 값 넘겨주기
+		- 서버가 db에서 삭제
 	- 추가
 		- 텍스트 추가 창 또는 사진 창으로 넘어가기
 
 -내 냉장고 이미지 인식 창
 	- ai로 이미지 인식하여 물건 정보 받아오기 or 텍스트로 입력받은 정보 받아오기
-	- 백엔드가 클라이언트에 넘김
+	- 서버가 클라이언트에 넘김
 	- 관련 물품 정보를 클라이언트에게 넘김
 	- 유저 확인
-	- 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게(false)가 물품 목록에 원하는 정보가 없을 시
-	- true시 백엔드가 db에 저장
+	- 클라이언트가 유저 의사 확인 후 true, false로 서버에게(false)가 물품 목록에 원하는 정보가 없을 시
+	- true시 서버가 db에 저장
 	- false시 다시 물품 조회 후 클라이언트에게
 		
 - 내 냉장고 텍스트 추가 창
-	- 사용자가 입력하는 정보를 백엔드로 넘김
-	- 백엔드가 식품 목록 db?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
+	- 사용자가 입력하는 정보를 서버로 넘김
+	- 서버가 식품 목록 db?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
 	- 관련 물품 정보를 클라이언트에게 넘김
 	- 유저 확인
 	- 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게(false)가 물품 목록에 원하는 정보가 없을 시
-	- true시 백엔드가 db에 저장
+	- true시 서버가 db에 저장
 	- false시 다시 물품 조회 후 클라이언트에게
 
 내 정보
 	- 프로필 편집
 		- 프로필 사진
 			- 유저가 사진을 올리면 백엔드에게 정보 전달(이벤트)
-			- 백엔드가 db에 저장
+			- 서버가 db에 저장
 		- 이름
-			- 유저가 이름 변경 시 백엔드에게 정보 전달(이벤트)
-			- 백엔드가 db에 저장
+			- 유저가 이름 변경 시 서버에게 정보 전달(이벤트)
+			- 서버가 db에 저장
 
 	- 프로필 보기
-		- 사진과 이름을 백엔드에 요청
-		- 백엔드가 클라이언트에게 전달
+		- 사진과 이름을 서버에 요청
+		- 서버가 클라이언트에게 전달
 		- 클라이언트가 띄움
 
 	- 로그인한 계정
@@ -96,7 +96,7 @@
 		- 로그인 시
 			- 로그아웃 기능
 			- 로그인 정보 요청
-			- 백엔드가 db 조회 후 클라이언트에게 전달
+			- 서버가 db 조회 후 클라이언트에게 전달
 			- 클라이언트가 띄움
 		- 로그인 안 했을 시
 			- 로그인 기능
@@ -111,7 +111,7 @@
 		- 클라이언트에게 전달
 		- 띄움
 	- 편집
-		- 백엔드에게 이벤트 전달
+		- 서버에게 이벤트 전달
 			- 어느 부분을 수정하였는 지
 		- db에 저장
 
@@ -133,7 +133,7 @@
 		- 로그인 시
 			- 로그아웃 기능
 			- 로그인 정보 요청
-			- 백엔드가 db 조회 후 클라이언트에게 전달
+			- 서버가 db 조회 후 클라이언트에게 전달
 			- 클라이언트가 띄움
 			- 회원 탈퇴 기능
 				- 이벤트 전달
