--- a/기능명세서.md
+++ b/기능명세서.md
@@ -1,245 +1,267 @@
-기능 명세서
+# 기능 명세서
 
-메인 
-	- 검색
+## 메인
 
-네비게이션 바
-	- 이동 기능
+- 검색
 
-검색
-	- 필터에서 유저가 선택한 값을 서버로 넘겨주는 작업
-	넘겨줄 값
-		필수
-			- 외식/집밥 여부
-			- 가격대
-		선택
-			- 종류 (한식, 중식 등)
-			- 열량 및 식성(육식, 채식)
-			- 집밥 시 메뉴 가짓 수 선택 가능(선택)
-	- 받은 값과 유저가 미리 정의한 값을 ai로 처리해 식단을 짜는 작업
-	- 식단을 클라이언트로 넘겨 표시하는 작업
-	받아올 값
-		- 공통 
-			- 가격 오름차순 값
-		- 외식
-			- 평균 가격
-			- 영양 정보
-			- 주의 사항 표시
-		- 집밥
-			- 레시피
-			- 영양 정보
-			- 주의 사항 표시
-			- 재료
-				- 재료를 현재 가지고 있는 지 여부
-			- 평균 가격
-	- 식단을 받으면 검색결과창으로 넘어가는 작업
+## 네비게이션 바
 
-검색결과창
-	- 검색에서 받은 정보를 가공하여 클라이언트에서 표시
-		- 공통
-			- 영양 정보
-			- 주의 사항
-			- 평균 가격
-		- 집밥
-			- 레시피
-			- 재료
+- 이동 기능
 
-내 냉장고
-	- 내 냉장고 편집 기능
-	- 내 냉장고 목록 이동 기능
+## 검색
 
-내 냉장고 물품 목록
-	- 서버에서 유저 냉장고 정보 넘기기
-	- 클라이언트가 목록 표시
+- 필터에서 유저가 선택한 값을 서버로 넘겨주는 작업
+넘겨줄 값
+- 필수
+  - 외식/집밥 여부
+  - 가격대
 
-내 냉장고 편집
-	- 삭제
-		- 서버에게 값 넘겨주기
-		- 서버가 db에서 삭제
-	- 추가
-		- 텍스트 추가 창 또는 사진 창으로 넘어가기
+- 선택
+  - 종류 (한식, 중식 등)
+  - 열량 및 식성(육식, 채식)
+  - 집밥 시 메뉴 가짓 수 선택 가능(선택)
+- 받은 값과 유저가 미리 정의한 값을 ai로 처리해 식단을 짜는 작업
+- 식단을 클라이언트로 넘겨 표시하는 작업
+- 받아올 값
+  - 공통
+    - 가격 오름차순 값
+  - 외식
+    - 평균 가격
+    - 영양 정보
+    - 주의 사항 표시
+  - 집밥
+    - 레시피
+    - 영양 정보
+    - 주의 사항 표시
+    - 재료
+    - 재료를 현재 가지고 있는 지 여부
+    - 평균 가격
+- 식단을 받으면 검색결과창으로 넘어가는 작업
 
--내 냉장고 이미지 인식 창
-	- ai로 이미지 인식하여 물건 정보 받아오기 or 텍스트로 입력받은 정보 받아오기
-	- 서버가 클라이언트에 넘김
-	- 관련 물품 정보를 클라이언트에게 넘김
-	- 유저 확인
-	- 클라이언트가 유저 의사 확인 후 true, false로 서버에게(false)가 물품 목록에 원하는 정보가 없을 시
-	- true시 서버가 db에 저장
-	- false시 다시 물품 조회 후 클라이언트에게
-		
+## 검색결과창
+
+- 검색에서 받은 정보를 가공하여 클라이언트에서 표시
+- 공통
+  - 영양 정보
+  - 주의 사항
+  - 평균 가격
+- 집밥
+  - 레시피
+  - 재료
+
+## 내 냉장고
+
+- 내 냉장고 편집 기능
+- 내 냉장고 목록 이동 기능
+
+## 내 냉장고 물품 목록
+
+- 서버에서 유저 냉장고 정보 넘기기
+- 클라이언트가 목록 표시
+
+## 내 냉장고 편집
+
+- 삭제
+  - 서버에게 값 넘겨주기
+  - 서버가 db에서 삭제
+- 추가
+  - 텍스트 추가 창 또는 사진 창으로 넘어가기
+  
+- 내 냉장고 이미지 인식 창
+  - ai로 이미지 인식하여 물건 정보 받아오기 or 텍스트로 입력받은 정보 받아오기
+  - 서버가 클라이언트에 넘김
+  - 관련 물품 정보를 클라이언트에게 넘김
+  - 유저 확인
+  - 클라이언트가 유저 의사 확인 후 true, false로 서버에게(false)가 물품 목록에 원하는 정보가 없을 시
+  - true시 서버가 db에 저장
+  - false시 다시 물품 조회 후 클라이언트에게
+  
 - 내 냉장고 텍스트 추가 창
-	- 사용자가 입력하는 정보를 서버로 넘김
-	- 서버가 식품 목록 db?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
-	- 관련 물품 정보를 클라이언트에게 넘김
-	- 유저 확인
-	- 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게(false)가 물품 목록에 원하는 정보가 없을 시
-	- true시 서버가 db에 저장
-	- false시 다시 물품 조회 후 클라이언트에게
+  - 사용자가 입력하는 정보를 서버로 넘김
+  - 서버가 식품 목록 db?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
+  - 관련 물품 정보를 클라이언트에게 넘김
+  - 유저 확인
+  - 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게(false)가 물품 목록에 원하는 정보가 없을 시
+  - true시 서버가 db에 저장
+  - false시 다시 물품 조회 후 클라이언트에게
 
-내 정보
-	- 프로필 편집
-		- 프로필 사진
-			- 유저가 사진을 올리면 백엔드에게 정보 전달(이벤트)
-			- 서버가 db에 저장
-		- 이름
-			- 유저가 이름 변경 시 서버에게 정보 전달(이벤트)
-			- 서버가 db에 저장
+## 내 정보
 
-	- 프로필 보기
-		- 사진과 이름을 서버에 요청
-		- 서버가 클라이언트에게 전달
-		- 클라이언트가 띄움
+- 프로필 편집
+  - 프로필 사진
+    - 유저가 사진을 올리면 백엔드에게 정보 전달(이벤트)
+    - 서버가 db에 저장
+  - 이름
+    - 유저가 이름 변경 시 서버에게 정보 전달(이벤트)
+    - 서버가 db에 저장
+  
+- 프로필 보기
+  - 사진과 이름을 서버에 요청
+  - 서버가 클라이언트에게 전달
+  - 클라이언트가 띄움
+  
+- 로그인한 계정
+  - 로그인 토큰 읽기
+  - 로그인 시
+    - 로그아웃 기능
+    - 로그인 정보 요청
+    - 서버가 db 조회 후 클라이언트에게 전달
+    - 클라이언트가 띄움
+  - 로그인 안 했을 시
+    - 로그인 기능
+    - 기본 이미지 및 게스트라고 띄움
+  
+- 입맛 정보 창 넘어가기
 
-	- 로그인한 계정
-		- 로그인 토큰 읽기
-		- 로그인 시
-			- 로그아웃 기능
-			- 로그인 정보 요청
-			- 서버가 db 조회 후 클라이언트에게 전달
-			- 클라이언트가 띄움
-		- 로그인 안 했을 시
-			- 로그인 기능
-			- 기본 이미지 및 게스트라고 띄움
+## 입맛 정보
 
-	- 입맛 정보 창 넘어가기
+- 보기
+  - 유저 사전 정보 요청
+  - db 조회
+  - 클라이언트에게 전달
+  - 띄움
+- 편집
+  - 서버에게 이벤트 전달
+  - 어느 부분을 수정하였는 지
+  - db에 저장
 
-입맛 정보
-	- 보기
-		- 유저 사전 정보 요청
-		- db 조회
-		- 클라이언트에게 전달
-		- 띄움
-	- 편집
-		- 서버에게 이벤트 전달
-			- 어느 부분을 수정하였는 지
-		- db에 저장
+## 최근 식단
+  
+- db에 최근 30일간의 식단 저장
+- 이벤트 전달
+- db 조회(최근식단)
+- 7일 단위로 클라이언트에게 정보 전달
 
-최근 식단
-	- db에 최근 30일간의 식단 저장
-	- 이벤트 전달
-	- db 조회(최근식단)
-	- 7일 단위로 클라이언트에게 정보 전달
+## 햄버거 메뉴
 
-햄버거 메뉴
-	- 설정 이동
-	- 최근 식단 이동 
-	- 내정보 이동
-	- 내 냉장고 이동
+- 설정 이동
+- 최근 식단 이동
+- 내정보 이동
+- 내 냉장고 이동
 
-설정
-	- 계정 관리
-		- 로그인 토큰 읽기
-		- 로그인 시
-			- 로그아웃 기능
-			- 로그인 정보 요청
-			- 서버가 db 조회 후 클라이언트에게 전달
-			- 클라이언트가 띄움
-			- 회원 탈퇴 기능
-				- 이벤트 전달
-				- db에서 삭제
-		- 로그인 안 했을 시
-			- 로그인 기능
-			- 기본 이미지 및 게스트라고 띄움
+## 설정
 
-	- 내 정보 창 이동
-	- 도움말(추후 세부 정보 추가)
-	- 서비스 이용 약관(추후)
-	- 공지사항
-		- 이벤트
-		- 업데이트 정보 조회
-		- 정보 전달
-		- 없으면 없다고 띄움
-	- 알림
-		- 알림 설정
-			- 사용자가 수정 시 이벤트 전달
-			- 쿠키 설정(로그인이랑 같은 애)
-			- 클라이언트가 쿠키 읽기
-			- 알림 시 알림하기
-		- 알림 내역
-			- 이벤트
-			- 최근 10개 알림 조회
+- 계정 관리
+  - 로그인 토큰 읽기
+  - 로그인 시
+    - 로그아웃 기능
+    - 로그인 정보 요청
+    - 서버가 db 조회 후 클라이언트에게 전달
+    - 클라이언트가 띄움
+    - 회원 탈퇴 기능
+      - 이벤트 전달
+      - db에서 삭제
+  - 로그인 안 했을 시
+    - 로그인 기능
+    - 기본 이미지 및 게스트라고 띄움
+  
+- 내 정보 창 이동
+- 도움말(추후 세부 정보 추가)
+- 서비스 이용 약관(추후)
+- 공지사항
+  - 이벤트
+  - 업데이트 정보 조회
+  - 정보 전달
+  - 없으면 없다고 띄움
+  
+- 알림
+  - 알림 설정
+    - 사용자가 수정 시 이벤트 전달
+    - 쿠키 설정(로그인이랑 같은 애)
+    - 클라이언트가 쿠키 읽기
+    - 알림 시 알림하기
+  - 알림 내역
+  - 이벤트
+  - 최근 10개 알림 조회
 
-	- 고객센터
-		- faq 띄움
-		- 신고 기능
-			- 신고 시 제목과 본문 내용, 유저 정보 보내기
-			- 관리자 이메일에 보내기
-			- 답변 안됐다고 설정
+- 고객센터
+  - faq 띄움
+  - 신고 기능
+    - 신고 시 제목과 본문 내용, 유저 정보 보내기
+    - 관리자 이메일에 보내기
+    - 답변 안됐다고 설정
 
-게스트
-	- 사전 정보 기능 x
-	- 신고 기능 x
-	- 내 냉장고 기능 x
-	- 최근 식단 x
+## 게스트
 
-로그인
-	- api	로 함
-	- 이벤트
-	- 기존 계정인 지 확인
-	- 쿠키 발행
+- 사전 정보 기능 x
+- 신고 기능 x
+- 내 냉장고 기능 x
+- 최근 식단 x
 
-로그아웃
-	- 이벤트
-	- 게스트 전환
+## 로그인
 
-회원 탈퇴
-	- 이벤트
-	- 관련 정보 삭제
+- api로 함
+- 이벤트
+- 기존 계정인 지 확인
+- 쿠키 발행
 
-회원 가입
-	- api 로 함
-	- 기존 계정 확인
-	- 계정 정보 생성(내 냉장고, 최근 식단)
-	- 유저 정보 입력 창 띄우기
+## 로그아웃
 
-유저 정보 입력
-	- 닉네임
-	- 선호 식단
-		- 불호, 호
-	- 아토피, 알레르기
-	- 프사
+- 이벤트
+- 게스트 전환
 
-관리자 버전
-	- 신고 답변 창
-		- 이벤트(제목, 내용)
-		- db에 답변 완료로 표시
-		- 해당 신고 유저에게 알람
+## 회원 탈퇴
 
-	- 신고 열람 창
-		- 이벤트
-		- db 조회
-		- 최신역순으로 정보 전달
-		- 띄우기
+- 이벤트
+- 관련 정보 삭제
 
-	- 공지 창
-		- 공지 목록
-			- 이벤ㅌ
-			- db조회
-			- 최신순 정보 전달
-			- 띄우기
-		- 공지 편집
-			- 이벤트(공지 정보 전달(제목, 내용))
-			- db 편집
-			- 유저 알림
+## 회원 가입
 
-Db 데이터
-	- 내 냉장고 목록
-	- 레시피
-	- 가격
-	- 주의 사항
-	- 평균 가격
-	- 재료
-	- 유저 정보
-		- 프로필 사진
-		- 이름
-		- 계정
-		- 입맛 정보
-			- 아토피
-			- 알레르기
-			- 선호 식단
-				- 불호, 호 재료
-	- 최근 식단
-	- 자주 물어보는 질문
-	- 공지
-	- 알림 내역
+- api 로 함
+- 기존 계정 확인
+- 계정 정보 생성(내 냉장고, 최근 식단)
+- 유저 정보 입력 창 띄우기
+
+## 유저 정보 입력
+
+- 닉네임
+- 선호 식단
+  - 불호, 호
+- 아토피, 알레르기
+- 프사
+
+## 관리자 버전
+
+- 신고 답변 창
+  - 이벤트(제목, 내용)
+  - db에 답변 완료로 표시
+  - 해당 신고 유저에게 알람
+  
+- 신고 열람 창
+  - 이벤트
+  - db 조회
+  - 최신역순으로 정보 전달
+  - 띄우기
+  
+- 공지 창
+  - 공지 목록
+    - 이벤ㅌ
+    - db조회
+    - 최신순 정보 전달
+    - 띄우기
+  - 공지 편집
+    - 이벤트(공지 정보 전달(제목, 내용))
+    - db 편집
+    - 유저 알림
+
+## Db 데이터
+
+- 내 냉장고 목록
+- 레시피
+- 가격
+- 주의 사항
+- 평균 가격
+- 재료
+- 유저 정보
+  - 프로필 사진
+  - 이름
+  - 계정
+  - 입맛 정보
+    - 아토피
+    - 알레르기
+    - 선호 식단
+      - 불호, 호 재료
+- 최근 식단
+- 자주 물어보는 질문
+- 공지
+- 알림 내역
