--- a/기능명세서.md
+++ b/기능명세서.md
@@ -1,21 +1,23 @@
-기능 명세서
+# 기능 명세서
 
-메인 
-	- 검색
+## 목차
+1. [메인](#메인)
+2. [내 냉장고](#내-냉장고)
 
-네비게이션 바
-	- 이동 기능
+### 메인
+1. [검색](#검색)
+2. [네비게이션 바](#네비게이션-바)
 
-검색
-	- 필터에서 유저가 선택한 값을 서버로 넘겨주는 작업
-	넘겨줄 값
-		필수
-			- 외식/집밥 여부
-			- 가격대
-		선택
-			- 종류 (한식, 중식 등)
-			- 열량 및 식성(육식, 채식)
-			- 집밥 시 메뉴 가짓 수 선택 가능(선택)
+#### 검색
+	- 유저가 검색한 내용을 서버로 넘겨주는 작업
+		- 넘겨줄 값
+			- 필수
+				- 외식/집밥 여부
+				- 가격대(최소치와 최대치)
+			- 선택
+				- 종류 (한식, 중식 등)
+				- 열량 및 식성(육식, 채식)
+				- 집밥 시 메뉴 가짓 수 선택 가능(선택)
 	- 받은 값과 유저가 미리 정의한 값을 ai로 처리해 식단을 짜는 작업
 	- 식단을 클라이언트로 넘겨 표시하는 작업
 	받아올 값
@@ -44,15 +46,18 @@
 			- 레시피
 			- 재료
 
-내 냉장고
+#### 네비게이션 바
+	- 각 화면으로 전환 기능
+
+### 내 냉장고
 	- 내 냉장고 편집 기능
 	- 내 냉장고 목록 이동 기능
 
-내 냉장고 물품 목록
+#### 내 냉장고 물품 목록
 	- 서버에서 유저 냉장고 정보 넘기기
 	- 클라이언트가 목록 표시
 
-내 냉장고 편집
+#### 내 냉장고 편집
 	- 삭제
 		- 서버에게 값 넘겨주기
 		- 서버가 db에서 삭제
@@ -77,7 +82,7 @@
 	- true시 서버가 db에 저장
 	- false시 다시 물품 조회 후 클라이언트에게
 
-내 정보
+### 내 정보
 	- 프로필 편집
 		- 프로필 사진
 			- 유저가 사진을 올리면 백엔드에게 정보 전달(이벤트)
@@ -104,7 +109,7 @@
 
 	- 입맛 정보 창 넘어가기
 
-입맛 정보
+### 입맛 정보
 	- 보기
 		- 유저 사전 정보 요청
 		- db 조회
@@ -115,19 +120,19 @@
 			- 어느 부분을 수정하였는 지
 		- db에 저장
 
-최근 식단
+### 최근 식단
 	- db에 최근 30일간의 식단 저장
 	- 이벤트 전달
 	- db 조회(최근식단)
 	- 7일 단위로 클라이언트에게 정보 전달
 
-햄버거 메뉴
+### 햄버거 메뉴
 	- 설정 이동
 	- 최근 식단 이동 
 	- 내정보 이동
 	- 내 냉장고 이동
 
-설정
+### 설정
 	- 계정 관리
 		- 로그인 토큰 읽기
 		- 로그인 시
@@ -167,40 +172,40 @@
 			- 관리자 이메일에 보내기
 			- 답변 안됐다고 설정
 
-게스트
+### 게스트
 	- 사전 정보 기능 x
 	- 신고 기능 x
 	- 내 냉장고 기능 x
 	- 최근 식단 x
 
-로그인
+### 로그인
 	- api	로 함
 	- 이벤트
 	- 기존 계정인 지 확인
 	- 쿠키 발행
 
-로그아웃
+### 로그아웃
 	- 이벤트
 	- 게스트 전환
 
-회원 탈퇴
+### 회원 탈퇴
 	- 이벤트
 	- 관련 정보 삭제
 
-회원 가입
+### 회원 가입
 	- api 로 함
 	- 기존 계정 확인
 	- 계정 정보 생성(내 냉장고, 최근 식단)
 	- 유저 정보 입력 창 띄우기
 
-유저 정보 입력
+### 유저 정보 입력
 	- 닉네임
 	- 선호 식단
 		- 불호, 호
 	- 아토피, 알레르기
 	- 프사
 
-관리자 버전
+### 관리자 버전
 	- 신고 답변 창
 		- 이벤트(제목, 내용)
 		- db에 답변 완료로 표시
@@ -223,7 +228,7 @@
 			- db 편집
 			- 유저 알림
 
-Db 데이터
+### Db 데이터
 	- 내 냉장고 목록
 	- 레시피
 	- 가격
