--- a/기능명세서.md
+++ b/기능명세서.md
@@ -12,11 +12,11 @@
 	- 유저가 검색한 내용을 서버로 넘겨주는 작업
 		- 넘겨줄 값
 			- 필수
+				- 물품 이름
+			- 선택
 				- 외식/집밥 여부
 				- 가격대(최소치와 최대치)
-			- 선택
 				- 종류 (한식, 중식 등)
-				- 열량 및 식성(육식, 채식)
 				- 집밥 시 메뉴 가짓 수 선택 가능(선택)
 	- 받은 값과 유저가 미리 정의한 값을 ai로 처리해 식단을 짜는 작업
 	- 식단을 클라이언트로 넘겨 표시하는 작업
@@ -42,15 +42,18 @@
 			- 영양 정보
 			- 주의 사항
 			- 평균 가격
+			- 유사 건강 음식
+			- 유사 인기 음식
+			- 레시피 동영상(유튜브)
 		- 집밥
-			- 레시피
+			- 레시피(글)
 			- 재료
 
 #### 네비게이션 바
 	- 각 화면으로 전환 기능
 
 ### 내 냉장고
-	- 내 냉장고 편집 기능
+	- 내 냉장고 편집 기능(재료 추가 및 제거)
 	- 내 냉장고 목록 이동 기능
 
 #### 내 냉장고 물품 목록
@@ -65,7 +68,7 @@
 		- 텍스트 추가 창 또는 사진 창으로 넘어가기
 
 -내 냉장고 이미지 인식 창
-	- ai로 이미지 인식하여 물건 정보 받아오기 or 텍스트로 입력받은 정보 받아오기
+	- ai로 이미지 인식하여 물건 정보 받아오기
 	- 서버가 클라이언트에 넘김
 	- 관련 물품 정보를 클라이언트에게 넘김
 	- 유저 확인
@@ -75,17 +78,17 @@
 		
 - 내 냉장고 텍스트 추가 창
 	- 사용자가 입력하는 정보를 서버로 넘김
-	- 서버가 식품 목록 db?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
+	- 물품 종류에 따라 단위가 바뀐다
+	- 서버가 식품 목록 정보 테이블?에서 관련 물품 정보 조회(10개)(정보는 상세정보여야함 ex) 체다치즈 0 치즈x)
 	- 관련 물품 정보를 클라이언트에게 넘김
 	- 유저 확인
-	- 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게(false)가 물품 목록에 원하는 정보가 없을 시
-	- true시 서버가 db에 저장
-	- false시 다시 물품 조회 후 클라이언트에게
+	- 클라이언트가 유저 의사 확인 후 true, false로 백엔드에게 (false가 물품 목록에 원하는 정보가 없을 시, true시 서버가 db에 저장)
+	- false시 다시 물품 조회 후 클라이언트에게 정보를 보냄(대영아 보고있으면 알아서 추가해 ㅎㅎ, 어떤식으로 요청 보내는지)
 
-### 내 정보
+### 
 	- 프로필 편집
 		- 프로필 사진
-			- 유저가 사진을 올리면 백엔드에게 정보 전달(이벤트)
+			- 유저가 사진을 올리면 서버에게 정보 전달(이벤트)
 			- 서버가 db에 저장
 		- 이름
 			- 유저가 이름 변경 시 서버에게 정보 전달(이벤트)
@@ -106,33 +109,22 @@
 		- 로그인 안 했을 시
 			- 로그인 기능
 			- 기본 이미지 및 게스트라고 띄움
+	- 공지사항
+		- 이벤트
+		- 업데이트 정보 조회
+		- 정보 전달
+		- 없으면 없다고 띄움
+	- 도움말(추후 세부 정보 추가)
+	- 알림 설정
+		- 알림 설정
+			- 사용자가 수정 시 이벤트 전달
+			- 쿠키 설정(로그인이랑 같은 애)
+			- 클라이언트가 쿠키 읽기
+			- 알림 시 알림하기
+		- 알림 내역
+			- 이벤트
+			- 최근 10개 알림 조회
 
-	- 입맛 정보 창 넘어가기
-
-### 입맛 정보
-	- 보기
-		- 유저 사전 정보 요청
-		- db 조회
-		- 클라이언트에게 전달
-		- 띄움
-	- 편집
-		- 서버에게 이벤트 전달
-			- 어느 부분을 수정하였는 지
-		- db에 저장
-
-### 최근 식단
-	- db에 최근 30일간의 식단 저장
-	- 이벤트 전달
-	- db 조회(최근식단)
-	- 7일 단위로 클라이언트에게 정보 전달
-
-### 햄버거 메뉴
-	- 설정 이동
-	- 최근 식단 이동 
-	- 내정보 이동
-	- 내 냉장고 이동
-
-### 설정
 	- 계정 관리
 		- 로그인 토큰 읽기
 		- 로그인 시
@@ -146,31 +138,38 @@
 		- 로그인 안 했을 시
 			- 로그인 기능
 			- 기본 이미지 및 게스트라고 띄움
-
-	- 내 정보 창 이동
-	- 도움말(추후 세부 정보 추가)
-	- 서비스 이용 약관(추후)
-	- 공지사항
-		- 이벤트
-		- 업데이트 정보 조회
-		- 정보 전달
-		- 없으면 없다고 띄움
-	- 알림
-		- 알림 설정
-			- 사용자가 수정 시 이벤트 전달
-			- 쿠키 설정(로그인이랑 같은 애)
-			- 클라이언트가 쿠키 읽기
-			- 알림 시 알림하기
-		- 알림 내역
-			- 이벤트
-			- 최근 10개 알림 조회
-
 	- 고객센터
 		- faq 띄움
 		- 신고 기능
 			- 신고 시 제목과 본문 내용, 유저 정보 보내기
 			- 관리자 이메일에 보내기
 			- 답변 안됐다고 설정
+	- 서비스 이용 약관(추후)
+	- 회원 탈퇴
+		-회원을 탈퇴함
+
+#### 입맛 정보
+	- 보기
+		- 유저 사전 정보 요청
+		- db 조회
+		- 클라이언트에게 전달
+		- 띄움
+	- 편집
+		- 서버에게 이벤트 전달
+			- 어느 부분을 수정하였는 지
+		- db에 저장
+
+#### 최근 식단
+	- db에 최근 30일간의 식단 저장
+	- 이벤트 전달
+	- db 조회(최근식단)
+	- 7일 단위로 클라이언트에게 정보 전달
+
+### 햄버거 메뉴
+	- 설정 이동
+	- 최근 식단 이동 
+	- 내정보 이동
+	- 내 냉장고 이동
 
 ### 게스트
 	- 사전 정보 기능 x
@@ -201,7 +200,6 @@
 ### 유저 정보 입력
 	- 닉네임
 	- 선호 식단
-		- 불호, 호
 	- 아토피, 알레르기
 	- 프사
 
@@ -243,7 +241,6 @@
 			- 아토피
 			- 알레르기
 			- 선호 식단
-				- 불호, 호 재료
 	- 최근 식단
 	- 자주 물어보는 질문
 	- 공지
