--- a/기능명세서.md
+++ b/기능명세서.md
@@ -18,43 +18,43 @@
 
 ## 계정 관리
 
-| 기능 명        | 세부 기능         | 설명                                                                | 특이 사항                                                     |
-| -------------- | ----------------- | ------------------------------------------------------------------- | ------------------------------------------------------------- |
-| 회원가입       | 정보 입력         | 아이디, 선호 식단, 아토피/알레르기 여부, 이름(닉네임), 프로필 사진  |                                                               |
-|                | 외부 API 회원가입 | naver, google, kakao API 로 회원 가입                               | 자체 회원 가입은 없음                                         |
-|                | 건너뛰기          | "그냥 넘어갈래요" 버튼을 통해 게스트 사용자로 활동                  | "로그인을 하지 않으면 일부 기능을 사용할 수 없습니다." 띄우기 |
-|                | 기존 계정 확인    | 기존에 있는 계정인 지 판별                                          | 기존에 있는 계정일 시 "이미 있는 계정입니다." 띄우기          |
-|                | 계정 정보 생성    | 새로운 사용자의 빈 내 냉장고, 빈 최근 식단 생성 및 계정 정보를 저장 |                                                               |
-|                | 초기 정보 입력    | 1. 선호하는 음식 종류를 입력                                        | 사용자 정보                                                   |
-|                |                   | 2. 아토피/알레르기 여부를 입력                                      | 사용자 정보                                                   |
-|                |                   | 3. 이름 입력                                                        | 사용자 정보                                                   |
-| 로그인         | 로그인            | 외부 API로 로그인 후 있는 계정인 지 확인                            | 계정을 저장하여 앱을 나가도 로그인 상태로 유지한다.           |
-|                | 로그인 유지       | 한 달동안 로그인 상태로 유지한다.                                   |                                                               |
-|                | 로그인 실패       | "없는 계정입니다."를 띄운다                                         |                                                               |
-|                | 로그인 성공       | "로그인 되었습니다."를 띄우고 메인 페이지로 이동한다                |                                                               |
-|                | 로그인한 계정     | 로그인한 계정 이메일을 띄움                                         | 게스트 상태일 시 게스트라고 띄움                              |
-| 계정 관리      | 로그인 O          | 로그아웃, 회원 정보 수정 및 회원 탈퇴 버튼                          |                                                               |
-|                | 로그아웃          | 로그아웃                                                            | 계정 저장을 해지                                              |
+| 기능 명        | 세부 기능         | 설명                                                                | 비고                                                               |
+| -------------- | ----------------- | ------------------------------------------------------------------- | ------------------------------------------------------------------ |
+| 회원가입       | 정보 입력         | 아이디, 선호 식단, 아토피/알레르기 여부, 이름(닉네임), 프로필 사진  |                                                                    |
+|                | 외부 API 회원가입 | naver, google, kakao API 로 로그인 후 토큰 받아오기                 | 자체 회원 가입은 없음                                              |
+|                | 건너뛰기          | "그냥 넘어갈래요" 버튼을 통해 게스트 사용자로 활동                  | "로그인을 하지 않으면 일부 기능을 사용할 수 없습니다." 띄우기      |
+|                | 기존 계정 확인    | 기존에 있는 계정인 지 판별                                          | 기존에 있는 계정일 시 "이미 있는 계정입니다." 띄우기               |
+|                | 계정 정보 생성    | 새로운 사용자의 빈 내 냉장고, 빈 최근 식단 생성 및 계정 정보를 저장 |                                                                    |
+|                | 초기 정보 입력    | 1. 선호하는 음식 종류를 입력                                        | 사용자 정보 / 추후 수정 가능                                       |
+|                |                   | 2. 아토피/알레르기 여부를 입력                                      | 사용자 정보 / 추후 수정 가능                                       |
+|                |                   | 3. 이름 입력                                                        | 사용자 정보 / 추후 수정 가능                                       |
+| 로그인         | 로그인            | 외부 API로 로그인 후 있는 계정인 지 확인                            | 계정을 저장하여 앱을 나가도 로그인 상태로 유지한다.                |
+|                | 로그인 유지       | 한 달동안 로그인 상태로 유지한다.                                   |                                                                    |
+|                | 로그인 실패       | "없는 계정입니다."를 띄운다                                         | 회원가입하시겠습니까? 버튼, 비밀번호를 잊어버리셨나요? 버튼을 생성 |
+|                | 로그인 성공       | "로그인 되었습니다."를 띄우고 메인 페이지로 이동한다                |                                                                    |
+|                | 로그인한 계정     | 로그인한 계정 이메일을 띄움                                         | 게스트 상태일 시 게스트라고 띄움                                   |
+| 계정 관리      | 로그인 O          | 로그아웃, 회원 정보 수정 및 회원 탈퇴 버튼                          |                                                                    |
+|                | 로그아웃          | 로그아웃                                                            | 계정 저장을 해지                                                   |
 |                | 로그인 X          | 로그인 버튼, "게스트 회원입니다" 띄우기                             |
-|                | 회원 탈퇴         | "정말 탈퇴하시겠습니까? 정보는 복구되지 않습니다." 띄우기           | 회원 정보 삭제                                                |
-| 회원 정보 수정 | 프로필 편집       | 프로필 사진, 이름, 입맛정보 편집                                    |                                                               |
-|                | 입맛정보 편집     | 선호 음식 종류, 아토피/알레르기 유무 수정                           | 어떤 음식에 반응하는 지 기술                                  |
+|                | 회원 탈퇴         | "정말 탈퇴하시겠습니까? 정보는 복구되지 않습니다." 띄우기           | 회원 정보 삭제 / 게스트일 시 뜨지 않음                             |
+| 회원 정보 수정 | 프로필 편집       | 프로필 사진, 이름, 입맛정보 편집                                    |                                                                    |
+|                | 입맛정보 편집     | 선호 음식 종류, 아토피/알레르기 유무 수정                           | 어떤 음식에 반응하는 지 기술                                       |
 
 ## 메인 페이지
 
-![mainPage](./Images/mainpage.png)
+![mainPage](./Images/메인.png)
 
-| 기능명        | 세부 기능                  | 설명                                                                                                 | 특이 사항                  |
-| ------------- | -------------------------- | ---------------------------------------------------------------------------------------------------- | -------------------------- | ---- | --- |
+| 기능명        | 세부 기능                  | 설명                                                                                                 | 비고                       |
+| ------------- | -------------------------- | ---------------------------------------------------------------------------------------------------- | -------------------------- | ---- |
 | 헤더          | 로고                       | 메인 페이지로 이동                                                                                   |                            |
 |               | 종 모양 아이콘             | 알림 내역으로 이동                                                                                   |                            |
 | 상단 슬라이드 | 광고 및 추천 정보          | 스와이프로 이동 및 3초마다 자동 스와이프                                                             |                            |
 | 빠른 검색     | 검색 바                    | 키워드를 입력 받고 엔터 및 돋보기 버튼을 누르면 검색                                                 | 입력이 없을 시 검색 실행 X |
-|               | 카테고리                   | 인기 순으로 나열/누르면 해당 카테고리로 검색                                                         | 세부 사항이 정해지지 않음  | 검색 |     |
+|               | 카테고리                   | 인기 순으로 나열/누르면 해당 카테고리로 검색                                                         | 세부 사항이 정해지지 않음  | 검색 |
 | 추천 박스     | 인기 식사                  | 인기 순으로 10개 나열, 스와이프로 이동                                                               |                            |
 |               | 추천 식사                  | 사용자가 즐겨 찾는 키워드 및 알레르기, 아토피에 해당 사항이 없는 항목으로 10개 나열, 스와이프로 이동 |
 | 공지사항      | 앱 내 공지를 최신 2개 띄움 |                                                                                                      |
-| 푸터          | 로고                       | 아무 효과 없음                                                                                       |                            |
+| 푸터          | 로고                       | 홈으로 이동                                                                                          |                            |
 |               | 이용약관 및 ...            | 이용약관 및 ... 을 명시한 페이지로 이동                                                              | 아직 세부사항이 없음       |
 |               | 문의 하기                  | 문의 창으로 이동                                                                                     | 아직 세부사항이 없음       |
 |               | 광고/제휴 문의             | 광고/제휴 문의 창으로 이동                                                                           | 아직 세부사항이 없음       |
@@ -64,9 +64,9 @@
 
 ## 내 냉장고
 
-![My](./Images/my.png)
+![My](./Image/../Images/내%20냉장고.png)
 
-| 기능명      | 세부 기능        | 설명                                                                         | 특이 사항                                                          |
+| 기능명      | 세부 기능        | 설명                                                                         | 비고                                                               |
 | ----------- | ---------------- | ---------------------------------------------------------------------------- | ------------------------------------------------------------------ |
 | 헤더        | 로고             | 메인페이지로 이동                                                            |                                                                    |
 | 유저 정보   | 유저 닉네임      | 유저 닉네임을 띄움 "익명이" 님의 ...                                         |                                                                    |
@@ -82,14 +82,15 @@
 |             | 사진 추가        | 카메라를 키고 사물에 초점을 맞추면 ai 이미지 인식 후 유사한 순으로 품목 나열 | 세부 정보 정해지지 않음                                            |
 | 물품 정보   | 물품 박스        | 이름, 효능, 평균 가격, 사진                                                  |                                                                    |
 |             | 성분 박스        | 성분 구성 선 그래프, 특이 성분 미리 보기, 특이 사항(다이어트, 건강)          | 특이 성분이 뭘까 / 세부 정보 정해지지 않음                         |
-|             | 활용 레시피      | 해당 식재료로 만들 수 있는 레시피를 10개 나열                                |                                                                    |
+|             | 활용 레시피      | 해당 식재료로 만들 수 있는 레시피를 10개 나열                                | 유튜브에서 퍼온다                                                  |
 |             | 레시피 추천 영상 | 유튜브 영상 생각 중                                                          | 세부 정보 정해지지 않음                                            |
 
 ## 검색
 
-![Search-Filter](./Images/Search-filter.png)
+![Search-filter](./Images/Search-filter.png)
+![Search-filter-home](./Images/Search-filter-home.png)
 
-| 기능명              | 세부 기능        | 설명                                                                            | 특이 사항                                                        |
+| 기능명              | 세부 기능        | 설명                                                                            | 비고                                                             |
 | ------------------- | ---------------- | ------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
 | 검색                | 키워드 검색      | 검색 바로 키워드를 입력 후 엔터를 누르면 검색 / 키워드가 입력이 안됐을 시 검색X |                                                                  |
 | 추천 카테고리       | 추천 카테고리    | 인기 순으로 나열/누르면 해당 카테고리로 검색                                    | 세부 사항 없음                                                   |
@@ -111,9 +112,9 @@
 
 ## 더보기
 
-![More](./Images/more.png)
+![More](./Images/더보기.png)
 
-| 기능명          | 세부 기능               | 설명                                                                                  | 특이 사항                                                       |
+| 기능명          | 세부 기능               | 설명                                                                                  | 비고                                                            |
 | --------------- | ----------------------- | ------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
 | 사용자 정보     | 프로필 사진             | 사용자의 프로필 사진을 등록합니다.                                                    | 게스트일 경우 게스트 표시, 없을 경우 프로필 사진 추가 문구가 뜸 |
 |                 | ~님의 정보              | 사용자의 이름 + 님의 정보 라고 띄움                                                   |
@@ -129,19 +130,19 @@
 
 ## 논의해야 할 사항
 
-1. 검색 카테고리
-2. 냉장고 카테고리
-3. 광고/제휴 문의
-4. 문의하기
-5. 이용약관 및 개인정보 취급방침
-6. ai 이미지 인식 할 수 있어?
-7. 특이 성분이 뭘까 (물품 정보)
-8. 유튜브 영상 끌어올 수 있어?
-9. 검색 가격 최솟값
-10. 검색 결과 물품 정렬 방법
-11. 오류 신고 창
-12. 자세히 보기에 무엇이 뜰 지
-13. 유사 음식 기준
-14. 도움말
-15. 고객 민원
-16. 서비스 이용약관(설정)
+- [ ] 검색 카테고리
+- [ ] 냉장고 카테고리
+- [ ] 광고/제휴 문의
+- [ ] 문의하기
+- [ ] 이용약관 및 개인정보 취급방침
+- [ ] ai 이미지 인식 할 수 있어?
+- [ ] 특이 성분이 뭘까 (물품 정보)
+- [ ] 유튜브 영상 끌어올 수 있어?
+- [ ] 검색 가격 최솟값
+- [ ] 검색 결과 물품 정렬 방법
+- [ ] 오류 신고 창
+- [ ] 자세히 보기에 무엇이 뜰 지
+- [ ] 유사 음식 기준
+- [ ] 도움말
+- [ ] 고객 민원
+- [ ] 서비스 이용약관(설정)
