--- a/기능명세서.md
+++ b/기능명세서.md
@@ -66,13 +66,13 @@
 
 ![My](./Image/../Images/내%20냉장고.png)
 
-| 기능명      | 세부 기능        | 설명                                                                         | 비고                                                               |
+| 기능 명      | 세부 기능        | 설명                                                                         | 비고                                                               |
 | ----------- | ---------------- | ---------------------------------------------------------------------------- | ------------------------------------------------------------------ |
 | 헤더        | 로고             | 메인페이지로 이동                                                            |                                                                    |
 | 유저 정보   | 유저 닉네임      | 유저 닉네임을 띄움 "익명이" 님의 ...                                         |                                                                    |
 | 검색 바     | 키워드 검색      | 내 냉장고 내 해당 키워드에 맞는 음식을 검색                                  |                                                                    |
 | 카테고리    | 카테고리 검색    | 해당 카테고리에 맞는 음식을 검색                                             | 구체적인 정보가 있지 않음                                          |
-|             |                  | 육류, 야채류, 유제품, 생선류, 기타 5가지 카테고리가 있음                     |
+|             |                  | 육류, 야채류, 유제품, 생선류, 기타 5가지 카테고리가 있음                     | |
 | 식재료 박스 | 식재료 추가 버튼 | 내 냉장고 추가 창으로 이동                                                   |                                                                    |
 |             | 내 냉장고 목록   | 내 냉장고 내의 30개의 목록을 가나다 순으로 나열                              | 30개의 정보를 먼저 받아오고 스크롤로 내리며 다 보았을 때 다시 요청 |
 | 식재료      | X 버튼           | 식재료 삭제, "삭제하시겠습니까?" 모달 띄우기                                 |                                                                    |
