--- a/기능명세서.md
+++ b/기능명세서.md
@@ -45,14 +45,14 @@
 ![mainPage](./Images/메인.png)
 
 | 기능명        | 세부 기능                  | 설명                                                                                                 | 비고                       |
-| ------------- | -------------------------- | ---------------------------------------------------------------------------------------------------- | -------------------------- | ---- |
+| ------------- | -------------------------- | ---------------------------------------------------------------------------------------------------- | -------------------------- |
 | 헤더          | 로고                       | 메인 페이지로 이동                                                                                   |                            |
 |               | 종 모양 아이콘             | 알림 내역으로 이동                                                                                   |                            |
 | 상단 슬라이드 | 광고 및 추천 정보          | 스와이프로 이동 및 3초마다 자동 스와이프                                                             |                            |
 | 빠른 검색     | 검색 바                    | 키워드를 입력 받고 엔터 및 돋보기 버튼을 누르면 검색                                                 | 입력이 없을 시 검색 실행 X |
-|               | 카테고리                   | 인기 순으로 나열/누르면 해당 카테고리로 검색                                                         | 세부 사항이 정해지지 않음  | 검색 |
+|               | 카테고리                   | 인기 순으로 나열/누르면 해당 카테고리로 검색                                                         | 세부 사항이 정해지지 않음  |
 | 추천 박스     | 인기 식사                  | 인기 순으로 10개 나열, 스와이프로 이동                                                               |                            |
-|               | 추천 식사                  | 사용자가 즐겨 찾는 키워드 및 알레르기, 아토피에 해당 사항이 없는 항목으로 10개 나열, 스와이프로 이동 |
+|               | 추천 식사                  | 사용자가 즐겨 찾는 키워드 및 알레르기, 아토피에 해당 사항이 없는 항목으로 10개 나열, 스와이프로 이동 | |
 | 공지사항      | 앱 내 공지를 최신 2개 띄움 |                                                                                                      |
 | 푸터          | 로고                       | 홈으로 이동                                                                                          |                            |
 |               | 이용약관 및 ...            | 이용약관 및 ... 을 명시한 페이지로 이동                                                              | 아직 세부사항이 없음       |
