--- a/기능명세서.md
+++ b/기능명세서.md
@@ -20,7 +20,7 @@
 
 | 기능 명        | 세부 기능         | 설명                                                                | 비고                                                               |
 | -------------- | ----------------- | ------------------------------------------------------------------- | ------------------------------------------------------------------ |
-| 회원가입       | 정보 입력         | 아이디, 선호 식단, 아토피/알레르기 여부, 이름(닉네임), 프로필 사진  |                                                                    |
+| 회원가입       | 정보 입력         | 아이디, 선호 식단, 아토피/알레르기 여부, 이름(닉네임) | 회원가입 완료시 받아와야하는 정보 정리                                                                   |
 |                | 외부 API 회원가입 | naver, google, kakao API 로 로그인 후 토큰 받아오기                 | 자체 회원 가입은 없음                                              |
 |                | 건너뛰기          | "그냥 넘어갈래요" 버튼을 통해 게스트 사용자로 활동                  | "로그인을 하지 않으면 일부 기능을 사용할 수 없습니다." 띄우기      |
 |                | 기존 계정 확인    | 기존에 있는 계정인 지 판별                                          | 기존에 있는 계정일 시 "이미 있는 계정입니다." 띄우기               |
